[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["postgres", "chrono", "uuid", "macros", "runtime-tokio-native-tls"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
